# nn-test

./: data.py  main.py  pyproject.toml  tests.py  util.py
nn/: data.py  main.py  net.py  runner.py  train.py  util.py
tests/: runner.py  test_nn.py  tests.py
