[tool.poetry]
name = "nn"
version = "0.1.0"
description = ""
authors = ["jeremy vun <jeremy.vun@outlook.com>"]

[tool.poetry.dependencies]
python = "3.10"
matplotlib = "^3.5.1"
numpy = "^1.21.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
